removido bug overflowx mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,7 @@ header.escuro {
 
 @media screen and (max-width: 1024px) {
 
-    html, body{
+    html{
         overflow-x: hidden;
     }
 
